@@ -24,7 +24,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.SynchronousQueue;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
 import org.eclipse.jetty.server.AbstractConnector;
 import org.eclipse.jetty.server.Connector;
@@ -46,6 +46,8 @@ import org.springframework.boot.autoconfigure.web.ServerProperties.Jetty;
 import org.springframework.boot.context.properties.bind.Bindable;
 import org.springframework.boot.context.properties.bind.Binder;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySources;
+import org.springframework.boot.testsupport.web.servlet.DirtiesUrlFactories;
+import org.springframework.boot.testsupport.web.servlet.Servlet5ClassPathOverrides;
 import org.springframework.boot.web.embedded.jetty.ConfigurableJettyWebServerFactory;
 import org.springframework.boot.web.embedded.jetty.JettyServletWebServerFactory;
 import org.springframework.boot.web.embedded.jetty.JettyWebServer;
@@ -64,6 +66,8 @@ import static org.mockito.Mockito.mock;
  * @author Phillip Webb
  * @author HaiTao Zhang
  */
+@DirtiesUrlFactories
+@Servlet5ClassPathOverrides
 class JettyWebServerFactoryCustomizerTests {
 
 	private MockEnvironment environment;
@@ -284,6 +288,61 @@ class JettyWebServerFactoryCustomizerTests {
 	}
 
 	@Test
+	void customizeMaxRequestHttpHeaderSize() {
+		bind("server.max-http-request-header-size=2048");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
+		assertThat(requestHeaderSizes).containsOnly(2048);
+	}
+
+	@Test
+	void customMaxHttpRequestHeaderSizeIgnoredIfNegative() {
+		bind("server.max-http-request-header-size=-1");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
+		assertThat(requestHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void customMaxHttpRequestHeaderSizeIgnoredIfZero() {
+		bind("server.max-http-request-header-size=0");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> requestHeaderSizes = getRequestHeaderSizes(server);
+		assertThat(requestHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void defaultMaxHttpResponseHeaderSize() {
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void customizeMaxHttpResponseHeaderSize() {
+		bind("server.jetty.max-http-response-header-size=2KB");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(2048);
+	}
+
+	@Test
+	void customMaxHttpResponseHeaderSizeIgnoredIfNegative() {
+		bind("server.jetty.max-http-response-header-size=-1");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
+	void customMaxHttpResponseHeaderSizeIgnoredIfZero() {
+		bind("server.jetty.max-http-response-header-size=0");
+		JettyWebServer server = customizeAndGetServer();
+		List<Integer> responseHeaderSizes = getResponseHeaderSizes(server);
+		assertThat(responseHeaderSizes).containsOnly(8192);
+	}
+
+	@Test
 	void customIdleTimeout() {
 		bind("server.jetty.connection-idle-timeout=60s");
 		JettyWebServer server = customizeAndGetServer();
@@ -298,10 +357,18 @@ class JettyWebServerFactoryCustomizerTests {
 		return Arrays.stream(server.getServer().getConnectors())
 			.filter((connector) -> connector instanceof AbstractConnector)
 			.map(Connector::getIdleTimeout)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	private List<Integer> getRequestHeaderSizes(JettyWebServer server) {
+		return getHeaderSizes(server, HttpConfiguration::getRequestHeaderSize);
+	}
+
+	private List<Integer> getResponseHeaderSizes(JettyWebServer server) {
+		return getHeaderSizes(server, HttpConfiguration::getResponseHeaderSize);
+	}
+
+	private List<Integer> getHeaderSizes(JettyWebServer server, Function<HttpConfiguration, Integer> provider) {
 		List<Integer> requestHeaderSizes = new ArrayList<>();
 		// Start (and directly stop) server to have connectors available
 		server.start();
@@ -314,7 +381,7 @@ class JettyWebServerFactoryCustomizerTests {
 				.forEach((cf) -> {
 					ConnectionFactory factory = (ConnectionFactory) cf;
 					HttpConfiguration configuration = factory.getHttpConfiguration();
-					requestHeaderSizes.add(configuration.getRequestHeaderSize());
+					requestHeaderSizes.add(provider.apply(configuration));
 				});
 		}
 		return requestHeaderSizes;
